# 02_scalable_bioinformatics_pipeline_orchestrator

./: .env.example  Dockerfile  FILE_MANIFEST.txt  IMPLEMENTATION_STATUS.md  PLAN_SUMMARY.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SELF_EVOLVING_SOLVER.md  alerts.yml  docker-compose.yml  prometheus.yml  pyproject.toml  random_file_0.txt  random_file_1.txt  random_file_2.txt  requirements.txt  self_evolving_solver.py
.github/workflows/: tests.yml
Benchmark_AllToAll_vs_Transformer/: README.md
Benchmark_Extended_Scaling/: benchmark_extended_scaling.json
Hello-World/: README
configs/: default.yaml
custom_gpt_oss_120b_IDE/: .gitignore  README.md  extension.js  package.json
docs/: COMPLETION_PLAN.md  MONITORING.md  RUNBOOK_HPC_SETUP.md  RUNBOOK_LOCAL_SETUP.md  architecture.md  milestone_2026-03-02.md
dump_archive_12_4_2026_Dpc/: README.md  run_gbpusd_recency_experiment.sh  run_trading_training.sh  start_web_and_train.sh
e_amas_system/: .gitignore  README.md  pyproject.toml
e_amas_system/e_amas/: __init__.py  __main__.py  adversary.py  backends.py  cli.py  competition.py  ledger.py  manager.py  metrics.py  models.py  prompts.py  swarm.py  utils.py
e_amas_system/tests/: test_adversary.py  test_competition.py  test_manager.py
nextflow/: main.nf
prompt_builder_evolutivo/: README.md
scripts/: benchmark_extended_scaling_analysis.py  cli.py  main.py
src/: monitoring.py
terraform/: main.tf  variables.tf
tests/: test_engine.py  test_integration.py  test_metrics_exporter.py  test_monitoring.py  test_orchestrator.py  test_validation.py
(+40 files in other folders)
